--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote"> 
-                Nebuď bábovka a daj si koláč.</span>
-                <i class="fas fa-quote-right"></i>
+            <span id="quote"> </span>
+            <i class="fas fa-quote-right"></i>
         </div>
-        
+
         <!-- Author -->
         <div class="quote-author">
-            <span id="author"> Zuzka 2020</span>
+            <span id="author"> Zuzka 2020 </span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
-            <button id="new-quote">New Quote</button>
+            <button id="new-quote" title="Click me to get a new quote!">New Quote</button>
         </div>
     </div>
     <!-- Loader -->
@@ -36,4 +37,5 @@
     <script src="quotes.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
